--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "allex_i18nwebcomponent",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "i18n support for AllexJS WebApps",
   "main": "src/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/allex-web-components/i18n.git"
+    "url": "git@github.com:allex-web-components/i18n.git"
   },
   "keywords": [
     "ecosystem:AllexJS",
